syntax = "proto3";

package dev.toothpick.proto.api;

message TpTestEvent {
  oneof sealed_value {
    TpTestStarted started = 2;
    TpTestOutputLine outputLine = 3;
    TpTestResult result = 4;
    TpTestAborted aborted = 5;
    TpTestException exception = 6;
    TpImagePullingStarted image_pulling_started = 7;
    TpImagePullingProgress image_pulling_progress = 9;
    TpImagePullingResult image_pulling_result = 10;
    TpTestOutputLinePart outputLinePart = 8;
  }
}

message TpImagePullingStarted {
  string workerNode = 1;
  string imageRef = 2;
}

message TpImagePullingProgress {
  string workerNode = 1;
  string imageRef = 2;
  string log = 3;
}

message TpImagePullingSuccess {
  string imageId = 1;
}

message TpImagePullingFailure {
  string error = 1;
}

message TpImagePullingResult {
  string workerNode = 1;
  string imageRef = 2;
  oneof result {
    TpImagePullingSuccess success = 3;
    TpImagePullingFailure failure = 4;
  }
}

message TpTestStarted {
  string workerId = 2;
  string workerNode = 23;
}

message TpTestOutputLinePart {
  string content = 1;
  TpTestOutputLine.Pipe pipe = 2;
  bool isLast = 3;
}

message TpTestOutputLine {
  enum Pipe {
    STDOUT = 0;
    STDERR = 1;
  }
  string content = 1;
  Pipe pipe = 3;
}

message TpTestResult {
  int32 exitCode = 1;
}

message TpTestAborted {}

message TpTestException {
  string message = 1;
}
